TP 3 : test unit + integrations